--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Journal</title>
+    <title>Today, Tomorrow, and Yesteryear</title>
     <script src="https://unpkg.com/rita@3.0.23/dist/rita.min.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
